--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gouenaaa.github.io",
-  "homepage": "https://gouenaaa.github.io/home",
+  "homepage": "https://gouenaaa.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
